added configurations for working with system clipboard

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,3 +32,7 @@ set -g mouse-resize-pane off
 set -g mouse-select-window off
 
 setw -g mode-keys vi
+
+set-option -g default-command "reattach-to-user-namespace -l /bin/bash"
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste);tmux paste-buffer"
