--- a/tmux.conf
+++ b/tmux.conf
@@ -67,6 +67,19 @@ set -g status-justify centre
 setw -g monitor-activity on 
 set -g visual-activity on
 
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+
+unbind Up
+bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
+
+unbind Down 
+bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
+
 set-option -g default-command "reattach-to-user-namespace -l /bin/bash"
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste);tmux paste-buffer"
