--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,8 @@ setw -g pane-base-index 1
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind C-a send-prefix
 
-bind | split-window -h
-bind - split-window -v
+bind | split-window -c "#{pane_current_path}" -h
+bind - split-window -c "#{pane_current_path}" -v
 
 bind h select-pane -L
 bind j select-pane -D
