remove JAVA_HOME variable and delay the duration of showing panel number

--- a/tmux.conf
+++ b/tmux.conf
@@ -83,3 +83,6 @@ bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
 set-option -g default-command "reattach-to-user-namespace -l /bin/bash"
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste);tmux paste-buffer"
+
+
+set display-panes-time 2000 #2s
