--- a/tmux.conf
+++ b/tmux.conf
@@ -85,4 +85,4 @@ bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste);tmux paste-buffer"
 
 
-set display-panes-time 2000 #2s
+set -g display-panes-time 2000 #2s
