--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,8 @@ setw -g pane-base-index 1
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind C-a send-prefix
 
-bind | split-window -c "#{pane_current_path}" -h
-bind - split-window -c "#{pane_current_path}" -v
+bind | split-window  -h
+bind - split-window  -v
 
 bind h select-pane -L
 bind j select-pane -D
@@ -31,26 +31,15 @@ setw -g mode-keys vi
 
 set -g default-terminal "screen-256color"
 
-set -g status-fg white 
-set -g status-bg black
+set -g status-style fg=white,bg=black
 
-setw -g window-status-fg cyan 
-setw -g window-status-bg default 
-setw -g window-status-attr dim
-
-setw -g window-status-current-fg white 
-setw -g window-status-current-bg red 
-setw -g window-status-current-attr bright
-
-set -g pane-border-fg green 
-set -g pane-border-bg black
-
-set -g pane-active-border-fg white 
-set -g pane-active-border-bg yellow
-
-set -g message-fg white 
-set -g message-bg black 
-set -g message-attr bright
+setw -g window-status-style fg=cyan,bg=black
+setw -g window-status-current-style fg=white,bold,bg=red
+setw -g pane-border-style fg=green,bg=black
+setw -g pane-active-border-style fg=white,bg=yellow
+setw -g window-style fg=colour240,bg=colour235
+setw -g window-active-style fg=white,bg=black
+set -g message-style fg=white,bold,bg=black
 
 set -g status-left-length 40 
 set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
@@ -58,6 +47,7 @@ set -g status-right "#[fg=cyan]%d %b %R"
 set -g status-interval 60
 
 set -g status-justify centre
+
 
 setw -g monitor-activity on 
 set -g visual-activity on
@@ -75,9 +65,15 @@ bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
 unbind Down 
 bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
 
-set-option -g default-command "reattach-to-user-namespace -l /bin/bash"
+set -g default-command "reattach-to-user-namespace -l /bin/bash"
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste);tmux paste-buffer"
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\";tmux paste-buffer"
 
 
 set -g display-panes-time 2000 #2s
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+run '~/.tmux/plugins/tpm/tpm'
+
