--- a/tmux.conf
+++ b/tmux.conf
@@ -52,23 +52,22 @@ set -g status-justify centre
 setw -g monitor-activity on 
 set -g visual-activity on
 
-unbind [
+
 bind Escape copy-mode
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-selection
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind C-v run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
+
 
 unbind Up
 bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
 
 unbind Down 
 bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
-
-set -g default-command "reattach-to-user-namespace -l /bin/bash"
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\";tmux paste-buffer"
 
 
 set -g display-panes-time 2000 #2s
